Update png image to webp

--- a/Brand.html
+++ b/Brand.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Brand</title>
+    <meta name="description" content="SASS is a multipage website build using Flexbox and Grids with Responsive and jQuery for functionalities ">
+    <link rel="icon" href="./Images/bg3.webp" type="image/x-icon">
     <link rel="stylesheet" href="SASS/Brand.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -36,7 +38,7 @@
                     </div>
                     <div class="col-2 col-t-3 cart">
                         <form><span class="fa fa-shopping-cart" aria-hidden="true"></span>
-                            <select name="cart" id="carts">
+                            <select name="cart" id="carts" aria-label="cart">
                                 <option>empty</option>
                                 <option>List 1</option>
                                 <option>List 2</option>
@@ -176,7 +178,7 @@
                 </div>
             </div>
             <div class="btnmob">
-                <button><span></span><span></span><span></span></button>
+                <button aria-label="toggle-button"><span></span><span></span><span></span></button>
             </div>
         </div>
     </section>
@@ -199,8 +201,8 @@
             <div class="row">
                 <div class="col-6 col-p-12">
                     <div class="design">
-                        <img src="Images/brand1.png" alt="designer" width="570" height="400">
-                        <img src="Images/brand2.png" class="brand1" alt="designer" width="570" height="400">
+                        <img src="Images/brand1.webp" alt="designer" width="570" height="400">
+                        <img src="Images/brand2.webp" class="brand1" alt="designer" width="570" height="400">
                         <h2>OUR VALUES, VISION AND STRATEGY</h2>
                         <h3>THE ABOVE IMAGE WOULD BE A GREAT PLACE FOR AN ADVERTISING VIDEO</h3>
                         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ea nemo adipisci ipsum perspiciatis nobis nesciunt possimus obcaecati, culpa, cum beatae quia ullam eos hic dolore. Ipsa vitae debitis consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, aperiam reprehenderit inventore laudantium molestias voluptates distinctio fugiat non minus optio voluptate ea exercitationem nemo.</P>
@@ -211,20 +213,20 @@
                         <h2 class="handdesign">HAND DESIGN CLOTHING</h2>
                         <h3>ESTABLISHED IN 2013, AVENUE FASHION SED DICTUM ELIT VEL SAPIEN LUCTUS ERAS</h3>
                         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ea nemo adipisci ipsum perspiciatis nobis nesciunt possimus obcaecati, culpa, cum beatae quia ullam eos hic dolore. Ipsa vitae debitis consectetur elite. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, aperiam reprehenderit inventore its laudantium molestias voluptates distinctio fugiat non minus optio voluptate ea sdr exercitationem nemo.</P>
-                        <img src="Images/brand3.png" class="brand1" alt="designer" width="570" height="400">
+                        <img src="Images/brand3.webp" class="brand1" alt="designer" width="570" height="400">
                         <h2>ETHICAL TRADING</h2>
                         <h3>WE OVERSEE THE WORKING CONDITIONS OF THE PEOPLE IN THE SUPPLY CHAIN</h3>
                         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ea nemo adipisci ipsum perspiciatis nobis nesciunt possimus obcaecati, culpa, cum beatae quia ullam eos hic dolore. Ipsa vitae debitis consectetur elite. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, aperiam reprehenderit inventore its laudantium molestias.</P>
                         <div class="brand1">
                             <div class="row">
                                 <div class="col-4">
-                                    <img src="Images/award1.png" class="award" alt="award" width="144" height="100">
+                                    <img src="Images/award1.webp" class="award" alt="award" width="144" height="100">
                                 </div>
                                 <div class="col-4">
-                                    <img src="Images/award2.png" class="award" alt="award" width="178" height="100">
+                                    <img src="Images/award2.webp" class="award" alt="award" width="178" height="100">
                                 </div>
                                 <div class="col-4">
-                                    <img src="Images/award3.png" class="award" alt="award" width="136" height="90">
+                                    <img src="Images/award3.webp" class="award" alt="award" width="136" height="90">
                                 </div>
                             </div>
                         </div>
@@ -301,10 +303,10 @@
                 <div class="col-6 col-p-12">
                     <div class="social">
                         <ul class="flex justify-center">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
+                            <li><a href="#" aria-label="facebook"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="#" aria-label="twitter"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="#" aria-label="instagram"><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="#" aria-label="pinterest"><span class="fa fa-pinterest"></span></a></li>
                         </ul>
                     </div>
                 </div>
