--- a/Lookbook.html
+++ b/Lookbook.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Look Book</title>
+    <meta name="description" content="SASS is a multipage website build using Flexbox and Grids with Responsive and jQuery for functionalities ">
+    <link rel="icon" href="./Images/bg3.webp" type="image/x-icon">
     <link rel="stylesheet" href="SASS/Lookbook.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -36,7 +38,7 @@
                     </div>
                     <div class="col-2 col-t-3 cart">
                         <form><span class="fa fa-shopping-cart" aria-hidden="true"></span>
-                            <select name="cart" id="carts">
+                            <select name="cart" id="carts" aria-label="cart">
                                 <option>empty</option>
                                 <option>List 1</option>
                                 <option>List 2</option>
@@ -176,7 +178,7 @@
                 </div>
             </div>
             <div class="btnmob">
-                <button><span></span><span></span><span></span></button>
+                <button aria-label="toggle-button"><span></span><span></span><span></span></button>
             </div>
         </div>
     </section>
@@ -208,17 +210,17 @@
                 <div class="col-3 col-p-6">
                     <div class="tag">
                         <p class="tagtext"><sup>REF</sup>M1</p>
-                        <img src="Images/img1.png" alt="lookbook" width="420" height="500">
+                        <img src="Images/img1.webp" alt="lookbook" width="420" height="500">
                     </div>
                 </div>
                 <div class="col-3 col-p-6">
                     <div class="tag">
                         <p class="tagtext"><sup>REF</sup>W1</p>
-                        <img src="Images/look2.png" alt="lookbook" width="420" height="500">
+                        <img src="Images/look2.webp" alt="lookbook" width="420" height="500">
                     </div>
                 </div>
                 <div class="col-6 col-p-12">
-                    <div class="jens"><img src="Images/look3.png" alt="lookbook" width="870" height="500"></div>
+                    <div class="jens"><img src="Images/look3.webp" alt="lookbook" width="870" height="500"></div>
                     <div class="jenslook"> 
                         <h2>JANE'S <span>LOOKBOOK</span></h2>
                         <h3>GET THE LOOK FOR UNDER <span class="fa fa-gbp pound"></span>200!</h3>
@@ -232,31 +234,31 @@
                 <div class="col-3 col-p-6">
                     <div class="tag">
                         <p class="tagtext"><sup>REF</sup>MJ1</p>
-                        <img src="Images/look4.png" alt="lookbook" width="420" height="500">
+                        <img src="Images/look4.webp" alt="lookbook" width="420" height="500">
                     </div>
                 </div>
                 <div class="col-3 col-p-6">
                     <div class="tag">
                         <p class="tagtext"><sup>REF</sup>M2</p>
-                        <img src="Images/look5.png" alt="lookbook" width="420" height="500">
+                        <img src="Images/look5.webp" alt="lookbook" width="420" height="500">
                     </div>
                 </div>
                 <div class="col-3 col-p-6">
                     <div class="tag">
                         <p class="tagtext"><sup>REF</sup>W2</p>
-                        <img src="Images/look6.png" alt="lookbook" width="420" height="500">
+                        <img src="Images/look6.webp" alt="lookbook" width="420" height="500">
                     </div>
                 </div>
                 <div class="col-3 col-p-6">
                     <div class="tag">
                         <p class="tagtext"><sup>REF</sup>W3</p>
-                        <img src="Images/look7.png" alt="lookbook" width="420" height="500">
+                        <img src="Images/look7.webp" alt="lookbook" width="420" height="500">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-9 col-p-12">
-                    <img src="Images/look8.png" alt="lookbook" width="1320" height="500">
+                    <img src="Images/look8.webp" alt="lookbook" width="1320" height="500">
                     <div class="win"> 
                         <h2>WIN <span>A NEW LOOK!</span></h2>
                         <h3>ADD LOOKS OR ITEMS TO YOUR LOOKBOOK FOR A CHANCE OF WINNING</h3>
@@ -272,7 +274,7 @@
                 <div class="col-3 col-p-6 order">
                     <div class="tag">
                         <p class="tagtext"><sup>REF</sup>W4</p>
-                        <img src="Images/look9.png" alt="lookbook" width="420" height="500">
+                        <img src="Images/look9.webp" alt="lookbook" width="420" height="500">
                     </div>
                 </div>
             </div>
@@ -346,10 +348,10 @@
                 <div class="col-6 col-p-12">
                     <div class="social">
                         <ul class="flex justify-center">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
+                            <li><a href="#" aria-label="facebook"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="#" aria-label="twitter"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="#" aria-label="instagram"><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="#" aria-label="pinterest"><span class="fa fa-pinterest"></span></a></li>
                         </ul>
                     </div>
                 </div>
