--- a/Product.html
+++ b/Product.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
+    <meta name="description" content="SASS is a multipage website build using Flexbox and Grids with Responsive and jQuery for functionalities ">
+    <link rel="icon" href="./Images/bg3.webp" type="image/x-icon">
     <link rel="stylesheet" href="SASS/Product.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -36,7 +38,7 @@
                     </div>
                     <div class="col-2 col-t-3 cart">
                         <form><span class="fa fa-shopping-cart" aria-hidden="true"></span>
-                            <select name="cart" id="carts">
+                            <select name="cart" id="carts" aria-label="cart">
                                 <option>empty</option>
                                 <option>List 1</option>
                                 <option>List 2</option>
@@ -176,7 +178,7 @@
                 </div>
             </div>
             <div class="btnmob">
-                <button><span></span><span></span><span></span></button>
+                <button aria-label="toggle-button"><span></span><span></span><span></span></button>
             </div>
         </div>
     </section>
@@ -195,7 +197,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 col-t-12">
-                    <img src="Images/product1.png" alt="product" width="570" height="710">
+                    <img src="Images/product1.webp" alt="product" width="570" height="710">
                 </div>
                 <div class="col-6 col-t-12">
                     <h2>AVE CLASSIC SWEATSHIRT</h2>
@@ -204,12 +206,12 @@
                         <div><a href="">Add a Review</a></div> |
                         <div class="social flex">
                             <div class="rating"> Share:</div>
-                            <div><a href="#"><span class="fa fa-facebook"></span></a></span></div>
-                            <div><a href="#"><span class="fa fa-twitter"></span></a></div>
-                            <div><a href="#"><span class="fa fa-google-plus"></span></a></div>
-                            <div><a href="#"><span class="fa fa-pinterest"></span></a></div>
-                            <div><a href="#"><span class="fa fa-instagram"></span></a></div>
-                            <div><a href="#"><span class="fa fa-envelope"></span></a></div>
+                            <div><a href="#" aria-label="facebook"><span class="fa fa-facebook"></span></a></span></div>
+                            <div><a href="#" aria-label="twitter"><span class="fa fa-twitter"></span></a></div>
+                            <div><a href="#" aria-label="google"><span class="fa fa-google-plus"></span></a></div>
+                            <div><a href="#" aria-label="pinterest"><span class="fa fa-pinterest"></span></a></div>
+                            <div><a href="#" aria-label="instagram"><span class="fa fa-instagram"></span></a></div>
+                            <div><a href="#" aria-label="envelope"><span class="fa fa-envelope"></span></a></div>
                         </div> 
                     </div>
                     <div class="rupay">
@@ -381,10 +383,10 @@
                 <div class="col-6 col-p-12">
                     <div class="social">
                         <ul class="flex justify-center">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
+                            <li><a href="#" aria-label="facebook"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="#" aria-label="twitter"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="#" aria-label="instagram"><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="#" aria-label="pinterest"><span class="fa fa-pinterest"></span></a></li>
                         </ul>
                     </div>
                 </div>
