--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sass Project</title>
+    <title>SASS Project</title>
+    <meta name="description" content="SASS is a multipage website build using Flexbox and Grids with Responsive and jQuery for functionalities ">
+    <link rel="icon" href="./Images/bg3.webp" type="image/x-icon">
     <link rel="stylesheet" href="SASS/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -36,7 +38,7 @@
                     </div>
                     <div class="col-2 col-t-3 cart">
                         <form><span class="fa fa-shopping-cart" aria-hidden="true"></span>
-                            <select name="cart" id="carts">
+                            <select name="cart" id="carts" aria-label="cart">
                                 <option>empty</option>
                                 <option>List 1</option>
                                 <option>List 2</option>
@@ -176,7 +178,7 @@
                 </div>
             </div>
             <div class="btnmob">
-                <button><span></span><span></span><span></span></button>
+                <button aria-label="toggle"><span></span><span></span><span></span></button>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -213,7 +215,7 @@
                         <div class="col-6 col-p-12 midd">
                             <div class="pos xyz">
                                 <p class="price"><sup><small>&pound;</small></sup>89.99</p>
-                                <img src="Images/img1.png" alt="T-Shirts" width="420" height="500"> 
+                                <img src="Images/img1.webp" alt="T-Shirts" width="420" height="500"> 
                                 <div class="caption">
                                     <h2>MENS BURNT BLACK CASUAL TEE <sup> &pound;</sup> 89.99</h2>
                                     <div class="para">
@@ -237,7 +239,7 @@
                         <div class="col-6 col-p-12 midd">
                             <div class="pos xyz">
                                 <p class="price"><sup><small>&pound;</small></sup>47.99</p>
-                                <img src="Images/img2.png" alt="T-Shirts" width="420" height="500" >
+                                <img src="Images/img2.webp" alt="T-Shirts" width="420" height="500" >
                                 <div class="caption">
                                     <h2>WOMENS BURNT WHITE CASUAL TEE <sup> &pound;</sup> 47.99</h2>
                                     <div class="para">
@@ -263,7 +265,7 @@
                         <div class="col-12 col-p-12 midd">
                             <div class="pos xyz">
                                 <p class="price"><sup><small>&pound;</small></sup>69.95</p>
-                                <img class="p1" src="Images/img3.png" alt="T-Shirts" width="870" height="704">
+                                <img class="p1" src="Images/img3.webp" alt="T-Shirts" width="870" height="704">
                                 <div class="caption">
                                     <h2>MENS BURNT SKY BLUE CASUAL TEE <sup> &pound;</sup> 69.95</h2>
                                     <div class="para">
@@ -291,7 +293,7 @@
                         <div class="col-12 col-p-12 midd">
                             <div class="pos xyz">
                                 <p class="price"><del><sup><small>&pound;</small></sup>107</del> <sup><small>&pound;</small></sup>89.99</p>
-                                <img class="p2" src="Images/img4.png" alt="T-Shirts" width="870" height="704">
+                                <img class="p2" src="Images/img4.webp" alt="T-Shirts" width="870" height="704">
                                 <div class="caption">
                                     <h2>MENS BURNT LIGHT BLACK CASUAL TEE <sup> &pound;</sup> 89.99</h2>
                                     <div class="para">
@@ -317,7 +319,7 @@
                         <div class="col-6 col-p-12 midd">
                             <div class="pos xyz">
                                 <p class="price"><sup><small>&pound;</small></sup>57.90</p>
-                                <img src="Images/img2.png" alt="T-Shirts" width="420" height="500">
+                                <img src="Images/img2.webp" alt="T-Shirts" width="420" height="500">
                                 <div class="caption">
                                     <h2>WOMENS BURNT WHITE CASUAL TEE <sup> &pound;</sup> 57.90</h2>
                                     <div class="para">
@@ -341,7 +343,7 @@
                         <div class="col-6 col-p-12 midd">
                             <div class="pos xyz">
                                 <p class="price"><sup><small>&pound;</small></sup>34.79</p>
-                                <img src="Images/img6.png" alt="T-Shirts" width="420" height="500">
+                                <img src="Images/img6.webp" alt="T-Shirts" width="420" height="500">
                                 <div class="caption">
                                     <h2>WOMENS BURNT GREEN CASUAL TEE <sup> &pound;</sup> 34.79</h2>
                                     <div class="para">
@@ -376,7 +378,7 @@
                     <div class="box">
                         <div class="row">
                             <div class="col-6">
-                                <img src="Images/box1.png" alt="Men" width="237" height="489">
+                                <img src="Images/box1.webp" alt="Men" width="237" height="489">
                             </div>
                             <div class="col-6">
                                 <div class="side">
@@ -395,7 +397,7 @@
                     <div class="box">
                         <div class="row">
                             <div class="col-6">
-                                <img src="Images/box2.png" alt="Men" width="237" height="489">
+                                <img src="Images/box2.webp" alt="Men" width="237" height="489">
                             </div>
                             <div class="col-6">
                                 <div class="side">
@@ -414,7 +416,7 @@
                     <div class="box">
                         <div class="row">
                             <div class="col-6">
-                                <img src="Images/box2.png" alt="Men" width="237" height="489">
+                                <img src="Images/box2.webp" alt="Men" width="237" height="489">
                             </div>
                             <div class="col-6">
                                 <div class="side">
@@ -501,10 +503,10 @@
                 <div class="col-6 col-p-12">
                     <div class="social">
                         <ul class="flex justify-center">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
+                            <li><a href="#" aria-label="facebook"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="#" aria-label="twitter"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="#" aria-label="instagram"><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="#" aria-label="pinterest"><span class="fa fa-pinterest"></span></a></li>
                         </ul>
                     </div>
                 </div>
